[tool.poetry]
name = "think"
version = "0.1.0"
description = ""
authors = ["Dz <MathBeWithCode@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"
ipykernel = "^6.29.5"
sympy = "^1.13.3"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
